# StringClass

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: gtest.yml
String/: CMakeLists.txt
String/GeneralString/: CMakeLists.txt
String/GeneralString/include/: String.hpp
String/GeneralString/src/: String.cpp
String/GeneralString/ut/: CMakeLists.txt
String/String/: CMakeLists.txt
String/String/include/: String.hpp
String/String/src/: String.cpp
String/String/ut/: CMakeLists.txt
String/String/ut/src/: BasicStringTests.cpp
String/StringAccess/: CMakeLists.txt
String/StringAccess/src/: ElementAccess.cpp
String/StringAccess/ut/: CMakeLists.txt
String/StringAccess/ut/src/: ElementAccessTests.cpp
String/StringCapacity/: CMakeLists.txt
String/StringCapacity/src/: Capacity.cpp
String/StringCapacity/ut/: CMakeLists.txt
String/StringCapacity/ut/src/: CapacityTest.cpp
String/StringElementAccess/: CMakeLists.txt
String/StringElementAccess/src/: ElementAccess.cpp
String/StringElementAccess/ut/: CMakeLists.txt
String/StringIterators/: CMakeLists.txt
String/StringIterators/src/: Iterators.cpp
String/StringIterators/ut/: CMakeLists.txt
String/StringMember/: CMakeLists.txt
String/StringMember/src/: MemberFunctions.cpp
String/StringMember/ut/: CMakeLists.txt
String/StringMember/ut/src/: MemberFunctionsTests.cpp
String/StringNonMemberFunctions/: CMakeLists.txt
String/StringNonMemberFunctions/src/: StringNonMemberFunctions.cpp
String/StringNonMemberFunctions/ut/: CMakeLists.txt
String/StringOperations/: CMakeLists.txt
String/StringOperations/src/: StringOperation.cpp
String/StringOperations/ut/: CMakeLists.txt
String/Utilities/: CMakeLists.txt
String/Utilities/src/: Helpers.cpp  MemoryManagement.cpp
executable/: CMakeLists.txt
executable/StringTests/: CMakeLists.txt
executable/StringTests/src/: main.cpp
(+4 files in other folders)
